@@ -9,6 +9,7 @@ include::include.adoc[]
 * Fix `Retry.Mode.FEATURE` and `Retry.Mode.SETUP_FEATURE_CLEANUP` to make a test pass if a retry was successful.
 * Improve `@Retry` to be declarable on a spec class which will apply it to all feature methods in that class and subclasses (<<extensions.adoc#_retry,Docs>>)
 * Fix issue with `@SpringBean` mocks throwing `InvocationTargetException` instead of actual declared exceptions (#878, #887)
+* Fix void methods with implicit targets failing in `with` and `verifyAll` (#886)
 
 == 1.2-RC1 (2018-08-14)
 
